<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SaleNotifier</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="title_activity_item_search">ItemSearchActivity</string>
    <string name="title_activity_search_results">SearchResultsActivity</string>
    <string name="tracked_image_content_desc">Image relevant to the item</string>
    <string name="context_menu_current">View Current</string>
    <string name="context_menu_history">View History</string>
    <string name="context_menu_options">Options</string>
    <string name="context_menu_delete">Delete</string>
    <string name="context_menu_detailed">Database Details (Dev Only)</string>
    <string name="dialog_delete_title">Confirm Delete</string>
    <string name="dialog_delete_message">Are you sure you want to delete %s?</string>
    <string name="dialog_delete_positive">Delete</string>
    <string name="search_title">Item Search</string>
    <string name="search_name">Product Name</string>
    <string name="search_name_hint">Name</string>
    <string name="search_product_code">Product Code/UPC</string>
    <string name="search_product_code_hint">UPC</string>
    <string name="search_scan">Scan</string>
    <string name="search_distance">Search Distance</string>
    <string name="search_distance_default">50</string>
    <string name="search_only_local">Include only nearby/local sellers</string>
    <string name="bad_distance_unit_message">The %s unit probably won\'t work well.</string>

    <string-array name="search_distance_units">
        <item>Miles</item>
        <item>Kilometers</item>
        <item>Pixels</item>
        <item>Blue Whales</item>
        <item>Lightyears</item>
    </string-array>

    <string name="search_button">Find Deals</string>
    <string name="search_result_title">Search Result</string>
    <string name="search_result_subtitle">Search Result\'s Price</string>
    <string name="search_results_quit">Give Up</string>
    <string name="actionmode_search_results_track">Save To Track</string>
    <string name="actionmode_search_results_find">Find Current Prices</string>
    <string name="actionmode_search_result_title">Track or Browse Items</string>

    <integer name="viewfinder_border_width">4</integer>
    <integer name="viewfinder_border_length">60</integer>

    <string name="title_activity_barcode_scanner">BarcodeScannerActivity</string>
    <string name="title_activity_app_settings">AppSettingsActivity</string>
    <string name="title_activity_item_settings">ItemSettingsActivity</string>
    <string name="settings_notifications_title">Notifications</string>
    <string name="settings_allow_notifiations">Allow Notifications</string>
    <string name="settings_data_sources">Data Sources</string>

    <string-array name="settings_data_sources_options">
        <item>Semantics3</item>
    </string-array>

    <string name="settings_item_options">Item Options</string>
    <string name="settings_delete_after">Delete Prices After (Days): </string>
    <string name="settings_default_delete_after">30</string>
    <string name="action_settings_save">Save and Close</string>
    <string name="action_settings_close">Discard and Close</string>
    <string name="toast_settings_saved">Your settings were successfully saved.</string>
    <string name="item_settings_title_placeholder">Item Title Placeholder</string>
    <string name="item_settings_notification_hint">Threshold</string>
    <string name="item_settings_storage">Price Storage</string>
    <string name="item_settings_no_item">Cannot create settings for untracked item.</string>

    <string-array name="item_settings_notification_types">
        <item>Price Below</item>
        <item>Price Above</item>
        <item>Average Price Below</item>
    </string-array>

    <string name="item_settings_add_description">Add a notification</string>
    <string name="item_settings_remove_notification">Delete Notification</string>
    <string name="title_activity_item_database_content">ItemDatabaseContentActivity</string>
    <string name="no_results_found">Search yielded 0 results.  Go back to refine your search.</string>
    <string name="title_activity_item_history">ItemHistoryActivity</string>
    <string name="no_results">No search results were found.  Try going back and changing your search.</string>
    <string name="title_activity_item_current">ItemCurrentActivity</string>
    <string name="item_name_placeholder">Item Name Placeholder</string>
    <string name="best_available_price_format">Best Available Price: $%.2f</string>
    <string name="available_from_seller_format">Available from %s</string>
    <string name="item_current_content_desc">Tap to visit seller and view item</string>
    <string name="price_format">$%.2f</string>
    <string name="itemprice_seller_format">Seller: %s</string>
    <string name="actionmode_search_results_current">View more information</string>
    <string name="action_refresh">Check for prices</string>
    <string name="no_price_information">No Price Information</string>
    <string name="tracked_items_starter_hint">Start SAVING MONEY!</string>

</resources>