<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/item_current_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/item_name_placeholder"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RelativeLayout
        android:id="@+id/item_current_best_price_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/item_current_title"
        android:layout_marginTop="15dp"
        android:onClick="gotoBestSeller" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/item_current_best_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/best_available_price_format"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/item_current_best_seller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/available_from_seller_format"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/item_current_content_desc"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_action_next_item" />
    </RelativeLayout>

    <ListView
        android:id="@+id/item_current_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_current_best_price_container"
        android:layout_marginTop="10dp" >
    </ListView>

</RelativeLayout>